Only footer left

--- a/homepage.html
+++ b/homepage.html
@@ -55,11 +55,73 @@
 
         <!-- <img class="album" src="images/Album-cover.jpg" alt=""> -->
 
+        
         <section id="grid-container">
-            <div class="item item1">Album</div>
-            <div class="item item2">Lovely</div>
-            <div class="item item3">I Love You</div>
+            <div class="item item1">
+                <img class="pic" src="images/Pic1.webp" width="200" height="150" alt="">
+                <br></br>
+                <!-- <br></br> -->
+                Getting Older
+                <br></br>
+                my future
+                <br></br>
+                Oxytocin
+                <br></br>
+                GOLDWING
+                <br></br>
+                Lost Cause
+                <br></br>
+            </div>
+            <div class="item item2">
+                <img class="pic" src="images/Pic2.jpg" width="260" height="150" alt="">
+                <!-- <br></br> -->
+                <br></br>
+                I Didn't Change My number
+                <br></br>
+                Billie Bossa Nova
+                <br></br>
+                Halley's Comet
+                <br></br>
+                Not My Responsibillity
+                <br></br>
+                Happier Than Ever
+                <br></br>
+                Therefore I Am
+                <!-- <br></br> -->
+            </div>
+            <div class="item item3">
+                <img src="images/Pic3.webp" width="200" height="150" alt="">
+                <!-- <br></br> -->
+                <br></br>
+                OverHeated
+                <br></br>
+                Everybody Dies
+                <br></br>
+                Your Power
+                <br></br>
+                NDA
+                <br></br>
+                Male Fantasy
+                <br></br>
+            </div>
         </section>
+        <br></br><br></br><br></br><br></br><br></br><br></br><br></br>
+        <section>
+            <div class="flex-para">
+                <div class="box1">
+                    <div class="content">
+                        <br></br><br></br>
+                        <h3>Take a deeply personal look at extraordinary teenager<br></br>
+                            Billie Eilish. Award-winning filmmaker R.J. Cutler <br></br>
+                            follows her journey on the road, onstage, and at home <br></br>
+                            with her family as the writing and recording of her debut <br></br>
+                            album changes her life.</h3>
+                        <br></br><br></br>
+                    </div>
+                </div>
+            </div>
+            <br></br><br></br><br></br><br></br><br></br>
+            <img src="images/Wallpaper-3.jpg" alt="">
 
     </header>
 
