--- a/homepage.html
+++ b/homepage.html
@@ -122,7 +122,7 @@
             </div>
             <br></br><br></br><br></br><br></br><br></br>
             <img src="images/Wallpaper-3.jpg" alt="">
-
+        </section>
     </header>
 
     <!-- <section class="parent">
